Update 错误的结构